--- a/JolisCarrés/exo6.html
+++ b/JolisCarrés/exo6.html
@@ -46,6 +46,7 @@
             width: 50px;
             height: 50px;
             background-color: #00F;
+            transform:rotate(90deg);
         }
         #rotate{
  
@@ -62,7 +63,6 @@
         <div id="rotate">
             <div id="bleu">BLEU</div>
             <div id="rouge">ROUGE<div id="vert">VERT</div></div>
-
         </div>
             
     </div>
