--- a/php/index.html
+++ b/php/index.html
@@ -17,7 +17,7 @@
     </form>
     <br>
     <div>
-        <form action="traitementPOST.php" method="POSt">
+        <form action="traitementPOST.php" method="POST">
             <label for="Nom">Nom :</label>
             <input type="text" name="nom">
             <label for="Prenom">Prénom :</label>
