--- a/VIBES/index.html
+++ b/VIBES/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="assets/vendors/superResetForm.css">
     <title>FUTURA'VIBES</title>
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -18,7 +17,7 @@
     <header class="flex">
         <img src="assets/img/Futurama_Planet_Express.svg" alt="">
         <div class="flex">
-            <nav>
+            <nav class="mobileDisplay navAnimee">
                 <a href="">HOME</a>
                 <a href="">ABOUT</a>
                 <a href="">PORTFOLIO</a>
@@ -30,7 +29,17 @@
         </div>
     </header>
 
-    <div class="goutte"><i class="fas fa-tint"></i></div>
+    <div class="goutte"><div id="goutteMain"><i class="fas fa-tint"></div></i>
+
+        <ul class="goutteCouleur display">
+            <li><i id="red" class="fas fa-tint red"></i></li>
+            <li><i class="fas fa-tint blue"></i></li>
+            <li><i class="fas fa-tint purple"></i></li>
+        </ul>
+
+    </div>
+
+
 
     <div id="section-wrapper">
 
@@ -38,7 +47,7 @@
 
                     <h2>HTML TEMPLATE CREATIVE FOKS AND DESIGN AGENCIES</h2>
                     <p>Far far away, behind the word space, far froms the city New New York and the Earth, there live the blind texts.</p>
-                    <a href="">RIDE MORT</a>
+                    <a href="">RAIDE MORT</a>
 
 
             </section>
@@ -71,7 +80,7 @@
                     </dl>
                 </div>
                 <div>
-                <details>
+                <details open>
                     <summary>
                         <i class="fas fa-plus"></i>
                         NULLA CONSEQUAT MASSA
