--- a/VIBES/index.html
+++ b/VIBES/index.html
@@ -166,13 +166,12 @@
                     </div>
 
                 </blockquote>
-                <blockquote class="quote">
-                    <img src="assets/img/AvatarZoid.png" alt="" class="avatarSizing">
+                <blockquote id="center_quote" class="quote">
                     <div>
                         <p>Geht's hopla non lotto-owe elementum sed Verdammi quam. kuglopf adipiscing blottkopf, Carola non Christkindelsmärik sit salu id ornare Coopé de Truchtersheim messti de Bischheim Salu bissame dui placerat senectus auctor, ac ullamcorper baeckeoffe chambon wie amet, consectetur nüdle flammekueche knepfle kougelhopf Morbi porta in, Mauris gewurztraminer picon bière mollis libero.</p>
                         <p><span>Pr. Zoïdberg </span> - Whoop! Whoop! Whoop!</p>
                     </div>
- 
+                    <img src="assets/img/AvatarZoid.png" alt="" class="avatarSizing">
                 </blockquote>
                 <blockquote class="quote">
                     <img src="assets/img/AvatarLeila.png" alt="" class="avatarSizing">
